// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete preview image 1`] = `
<div class="buri-uploader">
  <div class="buri-uploader__wrapper">
    <div class="buri-uploader__upload" style="width: 30px; height: 30px;"><i class="buri-icon buri-icon-plus buri-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="buri-uploader__input"></div>
  </div>
</div>
`;

exports[`disable preview image 1`] = `
<div class="buri-uploader">
  <div class="buri-uploader__wrapper">
    <div class="buri-uploader__upload"><i class="buri-icon buri-icon-plus buri-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="buri-uploader__input"></div>
  </div>
</div>
`;

exports[`image-fit prop 1`] = `
<div class="buri-uploader">
  <div class="buri-uploader__wrapper">
    <div class="buri-uploader__preview">
      <div class="buri-image buri-uploader__preview-image" style="overflow: hidden; border-radius: 4px;"><img src="https://img.yzcdn.cn/buri/cat.jpeg" class="buri-image__img" style="object-fit: contain;">
        <div class="buri-image__loading"><i class="buri-icon buri-icon-photo-o buri-image__loading-icon">
            <!----></i></div>
      </div><i class="buri-icon buri-icon-clear buri-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="buri-uploader__upload"><i class="buri-icon buri-icon-plus buri-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="buri-uploader__input"></div>
  </div>
</div>
`;

exports[`max-count prop 1`] = `
<div class="buri-uploader">
  <div class="buri-uploader__wrapper">
    <div class="buri-uploader__preview">
      <div class="buri-image buri-uploader__preview-image" style="overflow: hidden; border-radius: 4px;"><img src="data:image/test" class="buri-image__img" style="object-fit: cover;">
        <div class="buri-image__loading"><i class="buri-icon buri-icon-photo-o buri-image__loading-icon">
            <!----></i></div>
      </div><i class="buri-icon buri-icon-clear buri-uploader__preview-delete">
        <!----></i>
    </div>
  </div>
</div>
`;

exports[`preview-size prop 1`] = `
<div class="buri-uploader">
  <div class="buri-uploader__wrapper">
    <div class="buri-uploader__preview" style="">
      <div class="buri-image buri-uploader__preview-image" style="width: 30px; height: 30px; overflow: hidden; border-radius: 4px;"><img src="data:image/test" class="buri-image__img" style="object-fit: cover;">
        <div class="buri-image__loading"><i class="buri-icon buri-icon-photo-o buri-image__loading-icon">
            <!----></i></div>
      </div><i class="buri-icon buri-icon-clear buri-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="buri-uploader__upload" style="width: 30px; height: 30px;"><i class="buri-icon buri-icon-plus buri-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="buri-uploader__input"></div>
  </div>
</div>
`;

exports[`render preview image 1`] = `
<div class="buri-uploader">
  <div class="buri-uploader__wrapper">
    <div class="buri-uploader__preview">
      <div class="buri-image buri-uploader__preview-image" style="overflow: hidden; border-radius: 4px;"><img src="https://img.yzcdn.cn/buri/cat.jpeg" class="buri-image__img" style="object-fit: cover;">
        <div class="buri-image__loading"><i class="buri-icon buri-icon-photo-o buri-image__loading-icon">
            <!----></i></div>
      </div><i class="buri-icon buri-icon-clear buri-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="buri-uploader__preview">
      <div class="buri-uploader__file"><i class="buri-icon buri-icon-description buri-uploader__file-icon">
          <!----></i>
        <div class="buri-uploader__file-name buri-ellipsis">https://img.yzcdn.cn/buri/test.pdf</div>
      </div><i class="buri-icon buri-icon-clear buri-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="buri-uploader__preview">
      <div class="buri-uploader__file"><i class="buri-icon buri-icon-description buri-uploader__file-icon">
          <!----></i>
        <div class="buri-uploader__file-name buri-ellipsis">test.pdf</div>
      </div><i class="buri-icon buri-icon-clear buri-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="buri-uploader__preview">
      <div class="buri-image buri-uploader__preview-image" style="overflow: hidden; border-radius: 4px;"><img src="data:image/test" class="buri-image__img" style="object-fit: cover;">
        <div class="buri-image__loading"><i class="buri-icon buri-icon-photo-o buri-image__loading-icon">
            <!----></i></div>
      </div><i class="buri-icon buri-icon-clear buri-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="buri-uploader__upload"><i class="buri-icon buri-icon-plus buri-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="buri-uploader__input"></div>
  </div>
</div>
`;

exports[`render upload-text 1`] = `
<div class="buri-uploader">
  <div class="buri-uploader__wrapper">
    <div class="buri-uploader__upload"><i class="buri-icon buri-icon-plus buri-uploader__upload-icon">
        <!----></i><span class="buri-uploader__upload-text">Text</span><input type="file" accept="image/*" class="buri-uploader__input"></div>
  </div>
</div>
`;
